Nube/Documentation/Grammar.txt
##### Nube lexical grammar ####

expression ->  literal
               | unary
               | binary
               | grouping ;

literal  ->  NUMBER | STRING | "true" | "false" | "null" ;
grouping ->  "(" expression ")" ;
unary    ->  ( "-" | "!" ) expression ;
binary   -> expression operator expression ;
operator ->  "==" | "!=" | "<" | "<=" | ">" | ">="
               | "+"  | "-"  | "*" | "/" ;


NUMBER -> ([\-]?)([1-9])
STRING -> [\w]+




Pentru ordinea efectuarii operatiilor (equal este o expresie la baza)

equal       → compare ( ( "!=" | "==" ) compare )* ;
compare     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | primary ;
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" ;
